--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="navbar.js" defer></script>
     <title>Home</title>
 </head>
 <body>
-    <nav>
-        <h1>Logo</h1>
-        <li>works</li>
-        <li>projects</li>
-        <li>project fps</li>
-        <li>blogs</li>
-        <li>contact me</li>
+    <nav class="navbar">
+        <div class="logo">Logo</div>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Works</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Project fps</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Contact me</a></li>
+            </ul>
+        </div>
     </nav>
     <h1>Hello website!</h1>
+    <p>ever wanted to know what it means to be a sussy baka and the powers within?</p>
 </body>
 </html>
