--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body>
     <nav class="navbar">
         <div class="logo">Logo</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <div class="navbar-links">
             <ul>
                 <li><a href="#">Works</a></li>
