css gradient text correction

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
             </ul>
         </div>
     </nav>
-    <h1>Hello website!</h1>
-    <p>ever wanted to know what it means to be a sussy baka and the powers within?</p>
+    <h1 class="main-header">Aethernet</h1>
+    <p>ever wanted to know what it meant to be a real epic coolie</p>
+
+
+    <h1 class="main-header">100 projects of code</h1>
+    <p>ever wanted to know what it meant to be a real epic coolie</p>
+
 </body>
 </html>
