Few more adjustments

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Logo</div>
+        <div class="logo">Aethernet</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -30,12 +30,17 @@
             </ul>
         </div>
     </nav>
-    <h1 class="main-header">Aethernet</h1>
-    <p>ever wanted to know what it meant to be a real epic coolie</p>
-
+    <p>Hi, my name is...</p>
+    <h1 class="main-header">Thanim Rahman</h1>
+    <h1 class="main-header">I like to code!</h1>
+    <p>I'm an undergratuade computer science student and an aspiring software engineer!</p>
 
     <h1 class="main-header">100 projects of code</h1>
-    <p>ever wanted to know what it meant to be a real epic coolie</p>
+    <p>Here are some projects I've made</p>
+    <p>I'm challenging myself to make 100 code projects</p>
+
+    <h1 class="main-header">Blogs</h1>
+    <p>stuffs idk</p>
 
 </body>
 </html>
